# chiux

./: CMakeLists.txt  Makefile  README.md
res/: config.ini
res/res/: config.ini
src/: main.cpp
src/config/: config.cpp  config.hpp
src/terminal/: main.cpp
src/terminal2/: main.cpp
src/ui/: desktop.cpp  desktop.hpp  menubar.cpp  menubar.hpp  popup_menu.cpp  popup_menu.hpp  theme.cpp  theme.hpp
src/util/: log.cpp  log.hpp  process.cpp  process.hpp
src/wm/: client.cpp  client.hpp  window_manager.cpp  window_manager.hpp
src/x11/: connection.cpp  connection.hpp
